--- a/index.html
+++ b/index.html
@@ -1,107 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <title>BullShoes</title>
-</head>
-<body>
-    <header>
-        <h1>BullShoes</h1>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="pages/ofertas.html">Ofertas</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="pages/qsomos.html">¿Quienes somos?</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="pages/productos.html">Productos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="pages/contacto.html">Contacto</a>
-                </li>
-              </ul>
-            </div>
+  </head>
+  <body>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-info p-3">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">BullShoes</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class=" collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto ">
+            <li class="nav-item">
+              <a class="nav-link mx-2 active" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="pages/ofertas.html">Ofertas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="#about-us">¿Quienes somos?</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="pages/productos.html">Productos</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="pages/contacto.html">Contacto</a>
+            </li>
+
+          </ul>
+          <ul class="navbar-nav ms-auto d-none d-lg-inline-flex">
+            <li class="nav-item mx-2">
+              <a class="nav-link text-dark h5" href target="blank"><i
+                  class="fab fa-google-plus-square"></i></a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link text-dark h5" href target="blank"><i
+                  class="fab fa-twitter"></i></a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link text-dark h5" href target="blank"><i
+                  class="fab fa-facebook-square"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- End navbar -->
+
+    <!-- Hero -->
+    <header
+      class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg bg-light">
+      <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+        <div class="lc-block mb-3">
+          <div editable="rich">
+            <h2 class="fw-bold display-4">Un poco de lo que dejo la colección invierno<p></p>
+              <p></p>
+            </h2>
           </div>
-        </nav>
+        </div>
+
+        <div class="lc-block d-grid gap-2 d-md-flex justify-content-md-start"><a
+            class="btn btn-primary px-4 me-md-2" href="pages/productos.html" role="button">Productos</a>
+          <a class="btn btn-outline-secondary px-4" href="pages/contacto.html" role="button">
+            Contactanos</a>
+        </div>
+      </div>
+      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden">
+        <div class="lc-block"><img class="rounded-start"
+            src="img/zap5.png"
+            alt="Photo by Diego PH" width="720"></div>
+      </div>
     </header>
-    <!-- Slader de productos -->
-    <div class="slader">
-        <img src="img/zap1.jpg" alt="Zapatilla 1" class="zapPric">
-        <img src="img/zap2.jpg" alt="Zapatilla 2" class="zapPric">
-        <img src="img/zap3.jpg" alt="Zapatilla 3" class="zapPric">
-        <img src="img/zap4.jpg" alt="Zapatilla 4" class="zapPric">
-    </div>
+
+    <!-- End Hero -->
+
+    <!-- Products slider -->
+
+    <section class="w-100">
+      <div class="row justify-content-center">
+        <div id="carouselExampleControls"
+          class="carousel carousel-dark slide bg-white">
+          <div class="carousel-inner 2-100" role="listbox">
+
+            <div class="carousel-item active">
+              <div class="col">
+                <img src="img/zap1.jpg" class="card-img-top" alt="...">
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <div class="col">
+                <img src="img/zap2.jpg" class="card-img-top" alt="...">
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <div class="col">
+                <img src="img/zap4.jpg" class="card-img-top" alt="...">
+              </div>
+            </div>
+
+          </div>
+          <a class="carousel-control-prev bg-transparent w-aut"
+            href="#carouselExampleControls" role="button" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          </a>
+          <a class="carousel-control-next bg-transparent w-aut"
+            href="#carouselExampleControls" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- End Products slider -->
+
     <!-- Informaciòn random o informativa sobre alguna novedad de la actualidad -->
-    <main>
-        <div class="info">
-        <h2>HISTORIA, MODA Y ROPA DEPORTIVA BULLSHOES DESDE 1949</h2>
-        <p id="hist">El deporte nos mantiene en forma. Te mantiene atento. Nos une. A través del deporte podemos cambiar vidas. Ya sea a través de historias de atletas inspiradores. Animándote a ponerte en marcha. Ofreciéndote artículos deportivos con las últimas tecnologías para mejorar tu rendimiento. Superá tu mejor marca personal.<br> BullShoes es el hogar del corredor, del jugador de básquet, del joven futbolista y del entusiasta del fitness. Del aventurero que escapa de la ciudad los fines de semana. De la instructora de yoga que enseña nuevas posturas. Las 3 Tiras se ven en el mundo de la música. En el escenario, en los festivales. Nuestra ropa deportiva para mujer y para hombre te mantiene concentrado antes de que suene el silbato. Durante la carrera. Y en la línea de meta. Apoyamos a los creadores. Estamos aquí para apoyar a los creadores. Sus vidas. Y cambiar el mundo.<br>
-        BullShoes es mucho más que ropa deportiva y ropa de entrenamiento. Nos asociamos con los mejores de la industria para co-crear. De esta manera, ofrecemos a nuestras seguidores la ropa deportiva y los estilos que mejor se adaptan a sus necesidades deportivas, sin dejar de lado la sostenibilidad. Apoyamos a los creadores Mejorar su juego. Creamos el cambio. Y pensamos en el impacto que tenemos en nuesto mundor.</p>
-
+    <section id="about-us" class="px-4 pt-5 mt-5 text-center bg-light">
+      <h1 class="display-4 fw-bold text-body-emphasis">Nuestra historia</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">El deporte nos mantiene en forma. Te mantiene
+          atento. Nos une. A través del deporte podemos cambiar vidas. Ya sea a
+          través de historias de atletas inspiradores. Animándote a ponerte en
+          marcha. Ofreciéndote artículos deportivos con las últimas tecnologías
+          para mejorar tu rendimiento. Superá tu mejor marca personal.<br>
+          BullShoes es el hogar del corredor, del jugador de básquet, del joven
+          futbolista y del entusiasta del fitness. Del aventurero que escapa de
+          la ciudad los fines de semana. De la instructora de yoga que enseña
+          nuevas posturas. Las 3 Tiras se ven en el mundo de la música. En el
+          escenario, en los festivales. Nuestra ropa deportiva para mujer y para
+          hombre te mantiene concentrado antes de que suene el silbato. Durante
+          la carrera. Y en la línea de meta. Apoyamos a los creadores. Estamos
+          aquí para apoyar a los creadores. Sus vidas. Y cambiar el mundo.<br>
+          BullShoes es mucho más que ropa deportiva y ropa de entrenamiento. Nos
+          asociamos con los mejores de la industria para co-crear. De esta
+          manera, ofrecemos a nuestras seguidores la ropa deportiva y los
+          estilos que mejor se adaptan a sus necesidades deportivas, sin dejar
+          de lado la sostenibilidad. Apoyamos a los creadores Mejorar su juego.
+          Creamos el cambio. Y pensamos en el impacto que tenemos en nuesto
+          mundor.</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+          <a href="pages/qsomos.html" class="btn btn-primary btn-lg px-4 me-sm-3">Ver
+            mas</a>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Galeria</button>
         </div>
-        <div>
-            <!-- Imagen de historia-->
-            <img src="img/historia.jpg" alt="Historia de la moda" class="imgHis">
+      </div>
+      <div class="overflow-hidden" style="max-height: 30vh;">
+        <div class="container px-5">
+          <img src="img/historia.jpg"
+            class="img-fluid border rounded-3 shadow-lg mb-4"
+            alt="Example image" width="700" height="500" loading="lazy">
         </div>
+      </div>
+    </section>
 
-    </main>
-    <div class="promInfo">
-        <h3>¿QUERES PROCOCIONAR TU MARCA?</h3>
-        <p>Estas empezando en con tu emprendimieto y no sabes como escalar en el ambito de clientes, BullShoes te trae una nueva forma de llegar a cada punto del pais.</p>
-        <div class="prom">
-            <a href="promocionar.html"><h4>¿QUERES PROMOCIONAR TU MARCA?</h4></a>
+    <!-- Colaboracion -->
+    <section class="px-4 py-5 text-center bg-warning">
+      <img class="d-block mx-auto mb-4" src="img/zap6.png" alt width="200px">
+      <h1 class="display-5 fw-bold text-body-emphasis">¿Queres promocionar tu
+        marca?</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">Estas empezando en con tu emprendimieto y no sabes
+          como escalar en el
+          ambito de clientes, BullShoes te trae una nueva forma de llegar a cada
+          punto del pais.</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <a class="btn btn-primary btn-lg px-4 gap-3" href="pages/promocionar.html">Promocionar</a>
         </div>
-    </div>
-           <!-- Marcas colaboradoras -->
-           <div class="marca">
-            <h4 class="marH4">MARCAS COLABORADORAS</h4>
-            <a href="https://www.adidas.com.ar/"><img src="img/adidas.png" alt="ADIDAS" class="marcas"></a>
-            <a href="https://www.nike.com.ar/"><img src="img/nike.png" alt="NIKE" class="marcas"></a>
-            <a href="https://ar.puma.com/"><img src="img/puma.png" alt="PUMA" class="marcas"></a>
-            <a href="https://www.reebok.com.ar/"><img src="img/reebok.png" alt="REEBOOK" class="marcas"></a>
-            <a href="https://converse.com.ar/home"><img src="img/converse.png" alt="CONVERSE" width="160" height="100"></a>
-            <a href="https://www.vans.com.ar/"><img src="img/vans.png" alt="VANS" width="200" height="90"></a>
-            <a href="https://pony-international.com/"><img src="img/pny.png" alt="PONY" width="200" height="90"></a>    
-           </div>
-<footer>
-    <div class="pie">
-        <table>
-            <tr>
-                <td><h4>AYUDA</h4></td>
-                <td><h4>INFO</h4></td>
-                <td><h4>NOSOTROS</h4></td>
-            </tr>
-            <tr>
-                <td>Ayuda 1</td>
-                <td>Info 1</td>
-                <td>Nosotros 1</td>
-            </tr>
-            <tr>
-                <td>Ayuda 2</td>
-                <td>Info 2</td>
-                <td>Nosotros 3</td>
-            </tr>
-            <tr>
-                <td>Ayuda 3</td>
-                <td>Info 3</td>
-                <td>Nosotros 3</td>
-            </tr>
-        </table>
-        <p>Copyright 2022©</p>
-        <p>Contáctanos al 444-444-444 o envía un correo a ayuda@bullshoes.com</p>
-    </div>
-</footer>
+      </div>
+    </section>
 
-</body>
+    <!-- Marcas colaboradoras -->
+    <section class="text-center">
+      <h2 class="mt-5">Marcas Colaborativas</h4>
+      <div class="row">
+        <div class="col-md-3">
+          <a href="https://www.adidas.com.ar/">
+            <img src="img/adidas.png" alt="Marca 1">
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="https://www.adidas.com.ar/">
+            <img src="img/nike.png" alt="Marca 2">
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="https://www.adidas.com.ar/">
+            <img src="img/puma.png" alt="Marca 3">
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="https://www.adidas.com.ar/">
+            <img src="img/adidas.png" alt="Marca 1">
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="https://www.adidas.com.ar/">
+            <img src="img/nike.png" alt="Marca 2">
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="https://www.adidas.com.ar/">
+            <img src="img/puma.png" alt="Marca 3">
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="https://www.adidas.com.ar/">
+            <img src="img/adidas.png" alt="Marca 1">
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="https://www.adidas.com.ar/">
+            <img src="img/nike.png" alt="Marca 2">
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <footer class="py-3 bg-dark">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Inicio</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Ofertas</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Quienes somos?</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Productos</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contacto</a></li>
+      </ul>
+      <p class="text-center text-muted">© 2022 BullShoes Company, Inc</p>
+    </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="js/main.js"></script>
+  </body>
 </html>
