--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,80 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/main.css">
-    <title>Contacto</title>
-</head>
-<body>
-    <header>
-        <h1>BullShoes</h1>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/ofertas.html">Ofertas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/qsomos.html">¿Quienes somos?</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/productos.html">Productos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                  </li>
-                </ul>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+    <title>BullShoes</title>
+  </head>
+  <body>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-info p-3">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">BullShoes</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class=" collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto ">
+            <li class="nav-item">
+              <a class="nav-link mx-2 active" aria-current="page"
+                href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="../pages/ofertas.html">Ofertas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="../pages/qsomos.html">¿Quienes
+                somos?</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="../pages/productos.html">Productos</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="../pages/contacto.html">Contacto</a>
+            </li>
+
+          </ul>
+          <ul class="navbar-nav ms-auto d-none d-lg-inline-flex">
+            <li class="nav-item mx-2">
+              <a class="nav-link text-dark h5" href target="blank"><i
+                  class="fab fa-google-plus-square"></i></a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link text-dark h5" href target="blank"><i
+                  class="fab fa-twitter"></i></a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link text-dark h5" href target="blank"><i
+                  class="fab fa-facebook-square"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- End navbar -->
+
+    <!-- Promocionar -->
+
+    <div class="embed-responsive embed-responsive-100x400px">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d35818.719732048536!2d-4.25169!3d55.868392!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488815562056ceeb%3A0x71e683b805ef511e!2sGlasgow%2C+Glasgow+City%2C+UK!5e0!3m2!1sen!2sus!4v1448625188752"
+        width="100%" height="450" frameborder="0" style="border:0"
+        allowfullscreen></iframe>
+    </div>
+
+    <div class="container my-5 pb-5">
+      <div class="row justify-content-center">
+        <div class="col-lg-9">
+          <h1 class="mb-3">
+            Contactanos
+          </h1>
+          <form>
+            <div class="row g-3">
+              <div class="col-md-6">
+                <label for="your-name" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="your-name"
+                  name="your-name" required>
+              </div>
+              <div class="col-md-6">
+                <label for="your-surname" class="form-label">Apellido</label>
+                <input type="text" class="form-control" id="your-surname"
+                  name="your-surname" required>
+              </div>
+              <div class="col-md-6">
+                <label for="your-email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="your-email"
+                  name="your-email" required>
+              </div>
+              <div class="col-md-6">
+                <label for="your-subject" class="form-label">Asunto</label>
+                <input type="text" class="form-control" id="your-subject"
+                  name="your-subject">
+              </div>
+              <div class="col-12">
+                <label for="your-message" class="form-label">Mensaje</label>
+                <textarea class="form-control" id="your-message"
+                  name="your-message" rows="5" required></textarea>
+              </div>
+              <div class="col-12">
+                <div class="row">
+                  <div class="col-md-6">
+                    <button type="submit" class="btn btn-dark w-100 fw-bold">Enviar</button>
+                  </div>
+                </div>
               </div>
             </div>
-          </nav>
-    </header>
-<main>
-  <!-- Formulario para consulta -->
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Consulta</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>
-</main>
-<!-- Ubicación -->
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.016890944558!2d-58.3864413111198!3d-34.603734387752226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses!2sar!4v1687485275562!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <footer>
-        <div class="pie">
-            <table>
-                <tr>
-                    <td><h4>AYUDA</h4></td>
-                    <td><h4>INFO</h4></td>
-                    <td><h4>NOSOTROS</h4></td>
-                </tr>
-                <tr>
-                    <td>Ayuda 1</td>
-                    <td>Info 1</td>
-                    <td>Nosotros 1</td>
-                </tr>
-                <tr>
-                    <td>Ayuda 2</td>
-                    <td>Info 2</td>
-                    <td>Nosotros 3</td>
-                </tr>
-                <tr>
-                    <td>Ayuda 3</td>
-                    <td>Info 3</td>
-                    <td>Nosotros 3</td>
-                </tr>
-            </table>
-            <p>Copyright 2022©</p>
-            <p>Contáctanos al 444-444-444 o envía un correo a ayuda@bullshoes.com</p>
+          </form>
         </div>
+      </div>
+    </div>
+
+    <!-- End Promocionar -->
+
+    <!-- Footer -->
+    <footer class="py-3 bg-dark">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#"
+            class="nav-link px-2 text-muted">Inicio</a></li>
+        <li class="nav-item"><a href="#"
+            class="nav-link px-2 text-muted">Ofertas</a></li>
+        <li class="nav-item"><a href="#"
+            class="nav-link px-2 text-muted">Quienes
+            somos?</a></li>
+        <li class="nav-item"><a href="#"
+            class="nav-link px-2 text-muted">Productos</a></li>
+        <li class="nav-item"><a href="#"
+            class="nav-link px-2 text-muted">Contacto</a></li>
+      </ul>
+      <p class="text-center text-muted">© 2022 BullShoes Company, Inc</p>
     </footer>
-</body>
+    <!-- End footer -->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="js/main.js"></script>
+  </body>
 </html>
