--- a/pages/promocionar.html
+++ b/pages/promocionar.html
@@ -1,11 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promociones</title>
-</head>
-<body>
-    
-</body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+    <title>BullShoes</title>
+  </head>
+  <body>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-info p-3">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">BullShoes</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class=" collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto ">
+            <li class="nav-item">
+              <a class="nav-link mx-2 active" aria-current="page"
+                href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="../pages/ofertas.html">Ofertas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="../pages/qsomos.html">¿Quienes
+                somos?</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="../pages/productos.html">Productos</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="../pages/contacto.html">Contacto</a>
+            </li>
+
+          </ul>
+          <ul class="navbar-nav ms-auto d-none d-lg-inline-flex">
+            <li class="nav-item mx-2">
+              <a class="nav-link text-dark h5" href target="blank"><i
+                  class="fab fa-google-plus-square"></i></a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link text-dark h5" href target="blank"><i
+                  class="fab fa-twitter"></i></a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link text-dark h5" href target="blank"><i
+                  class="fab fa-facebook-square"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- End navbar -->
+
+    <!-- Promocionar -->
+
+    <div class="p-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="../img/historia.jpg"
+            class="d-block mx-lg-auto img-fluid"
+            alt="Bootstrap Themes"
+            width="700" height="500" loading="lazy">
+        </div>
+        <div class="col-lg-6">
+          <h1 class="display-5 fw-bold lh-1 mb-3">Promociona tu marca</h1>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit.</p>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <button type="button"
+              class="btn btn-primary btn-lg px-4 me-md-2">Leer mas</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Promocionar -->
+
+    <!-- Footer -->
+    <footer class="py-3 bg-dark">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#"
+            class="nav-link px-2 text-muted">Inicio</a></li>
+        <li class="nav-item"><a href="#"
+            class="nav-link px-2 text-muted">Ofertas</a></li>
+        <li class="nav-item"><a href="#"
+            class="nav-link px-2 text-muted">Quienes
+            somos?</a></li>
+        <li class="nav-item"><a href="#"
+            class="nav-link px-2 text-muted">Productos</a></li>
+        <li class="nav-item"><a href="#"
+            class="nav-link px-2 text-muted">Contacto</a></li>
+      </ul>
+      <p class="text-center text-muted">© 2022 BullShoes Company, Inc</p>
+    </footer>
+    <!-- End footer -->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="js/main.js"></script>
+  </body>
 </html>
